@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180201"
-#define public MagickPackageReleaseDate "snapshot-20180201"
+#define public MagickPackageVersionAddendum ".020180203"
+#define public MagickPackageReleaseDate "snapshot-20180203"
