@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2018-02-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/jpeg.c (ReadIPTCProfile): Revert inadvertent wrong return
+codes added by change on December 9, 2017.  Fixes SourceForge bug
+542 &quot;Improper call to JPEG library in state 201&quot; since 1.3.28.</li>
+</ul>
+</blockquote>
 <p>2018-02-01  Greg Wolfe  &lt;<a class="reference external" href="mailto:gregory&#46;wolfe&#37;&#52;&#48;kodakalaris&#46;com">gregory<span>&#46;</span>wolfe<span>&#64;</span>kodakalaris<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 <ul class="simple">
