@@ -1,3 +1,9 @@
+2018-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jpeg.c (ReadIPTCProfile): Revert inadvertent wrong return
+	codes added by change on December 9, 2017.  Fixes SourceForge bug
+	542 "Improper call to JPEG library in state 201" since 1.3.28.
+
 2018-02-01  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
 
 	* magick/annotate.c (RenderFreetype): Fixed the text
